tools/CorgiScriptParser.py
# Generated from CorgiScript.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class CorgiScriptParser ( Parser ):

    grammarFileName = "CorgiScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'write'", "'writeln'", "'do'", "'else'", 
                     "'false'", "'if'", "'read'", "'then'", "'true'", "'while'", 
                     "'goto'", "'def'", "';'", "'('", "')'", "'='", "':='", 
                     "'<='", "'+'", "'!'", "'*'", "'-'", "'&'", "'/'", "'%'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "':'" ]

    symbolicNames = [ "<INVALID>", "WRITE", "WRITELN", "DO", "ELSE", "FALSE", 
                      "IF", "READ", "THEN", "TRUE", "WHILE", "GOTO", "DEF", 
                      "SEMICOLON", "OPENPAREN", "CLOSEPAREN", "EQUAL", "ASSIGNMENT", 
                      "LESSEQUAL", "PLUS", "NOT", "MULTIPLY", "SUB", "AND", 
                      "DIVIDE", "MODULO", "INTNUM", "STRING", "COMMENT", 
                      "WS", "IDENT", "COLON" ]

    RULE_program = 0
    RULE_statements = 1
    RULE_funcdef = 2
    RULE_function = 3
    RULE_statement = 4
    RULE_exp = 5
    RULE_boolean_ = 6
    RULE_boolterm = 7
    RULE_boolexp = 8
    RULE_string = 9
    RULE_factor = 10
    RULE_term = 11

    ruleNames =  [ "program", "statements", "funcdef", "function", "statement", 
                   "exp", "boolean_", "boolterm", "boolexp", "string", "factor", 
                   "term" ]

    EOF = Token.EOF
    WRITE=1
    WRITELN=2
    DO=3
    ELSE=4
    FALSE=5
    IF=6
    READ=7
    THEN=8
    TRUE=9
    WHILE=10
    GOTO=11
    DEF=12
    SEMICOLON=13
    OPENPAREN=14
    CLOSEPAREN=15
    EQUAL=16
    ASSIGNMENT=17
    LESSEQUAL=18
    PLUS=19
    NOT=20
    MULTIPLY=21
    SUB=22
    AND=23
    DIVIDE=24
    MODULO=25
    INTNUM=26
    STRING=27
    COMMENT=28
    WS=29
    IDENT=30
    COLON=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(CorgiScriptParser.StatementsContext,0)


        def funcdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorgiScriptParser.FuncdefContext)
            else:
                return self.getTypedRuleContext(CorgiScriptParser.FuncdefContext,i)


        def getRuleIndex(self):
            return CorgiScriptParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CorgiScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CorgiScriptParser.DEF:
                self.state = 24
                self.funcdef()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorgiScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(CorgiScriptParser.StatementContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(CorgiScriptParser.SEMICOLON)
            else:
                return self.getToken(CorgiScriptParser.SEMICOLON, i)

        def getRuleIndex(self):
            return CorgiScriptParser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = CorgiScriptParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.statement()
            self.state = 37
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 33
                    self.match(CorgiScriptParser.SEMICOLON)
                    self.state = 34
                    self.statement() 
                self.state = 39
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 40
            self.match(CorgiScriptParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(CorgiScriptParser.DEF, 0)

        def function(self):
            return self.getTypedRuleContext(CorgiScriptParser.FunctionContext,0)


        def statement(self):
            return self.getTypedRuleContext(CorgiScriptParser.StatementContext,0)


        def getRuleIndex(self):
            return CorgiScriptParser.RULE_funcdef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdef" ):
                return visitor.visitFuncdef(self)
            else:
                return visitor.visitChildren(self)




    def funcdef(self):

        localctx = CorgiScriptParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(CorgiScriptParser.DEF)
            self.state = 43
            self.function()
            self.state = 44
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(CorgiScriptParser.IDENT)
            else:
                return self.getToken(CorgiScriptParser.IDENT, i)

        def OPENPAREN(self):
            return self.getToken(CorgiScriptParser.OPENPAREN, 0)

        def CLOSEPAREN(self):
            return self.getToken(CorgiScriptParser.CLOSEPAREN, 0)

        def getRuleIndex(self):
            return CorgiScriptParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = CorgiScriptParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(CorgiScriptParser.IDENT)
            self.state = 47
            self.match(CorgiScriptParser.OPENPAREN)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CorgiScriptParser.IDENT:
                self.state = 48
                self.match(CorgiScriptParser.IDENT)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(CorgiScriptParser.CLOSEPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(CorgiScriptParser.WRITE, 0)

        def OPENPAREN(self):
            return self.getToken(CorgiScriptParser.OPENPAREN, 0)

        def CLOSEPAREN(self):
            return self.getToken(CorgiScriptParser.CLOSEPAREN, 0)

        def INTNUM(self):
            return self.getToken(CorgiScriptParser.INTNUM, 0)

        def string(self):
            return self.getTypedRuleContext(CorgiScriptParser.StringContext,0)


        def WRITELN(self):
            return self.getToken(CorgiScriptParser.WRITELN, 0)

        def IDENT(self):
            return self.getToken(CorgiScriptParser.IDENT, 0)

        def ASSIGNMENT(self):
            return self.getToken(CorgiScriptParser.ASSIGNMENT, 0)

        def function(self):
            return self.getTypedRuleContext(CorgiScriptParser.FunctionContext,0)


        def exp(self):
            return self.getTypedRuleContext(CorgiScriptParser.ExpContext,0)


        def IF(self):
            return self.getToken(CorgiScriptParser.IF, 0)

        def boolexp(self):
            return self.getTypedRuleContext(CorgiScriptParser.BoolexpContext,0)


        def THEN(self):
            return self.getToken(CorgiScriptParser.THEN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorgiScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(CorgiScriptParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(CorgiScriptParser.ELSE, 0)

        def WHILE(self):
            return self.getToken(CorgiScriptParser.WHILE, 0)

        def DO(self):
            return self.getToken(CorgiScriptParser.DO, 0)

        def READ(self):
            return self.getToken(CorgiScriptParser.READ, 0)

        def statements(self):
            return self.getTypedRuleContext(CorgiScriptParser.StatementsContext,0)


        def GOTO(self):
            return self.getToken(CorgiScriptParser.GOTO, 0)

        def getRuleIndex(self):
            return CorgiScriptParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CorgiScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(CorgiScriptParser.WRITE)
                self.state = 57
                self.match(CorgiScriptParser.OPENPAREN)
                self.state = 60
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CorgiScriptParser.INTNUM]:
                    self.state = 58
                    self.match(CorgiScriptParser.INTNUM)
                    pass
                elif token in [CorgiScriptParser.STRING]:
                    self.state = 59
                    self.string()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 62
                self.match(CorgiScriptParser.CLOSEPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.match(CorgiScriptParser.WRITELN)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.match(CorgiScriptParser.IDENT)
                self.state = 65
                self.match(CorgiScriptParser.ASSIGNMENT)
                self.state = 66
                self.function()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.match(CorgiScriptParser.IDENT)
                self.state = 68
                self.match(CorgiScriptParser.ASSIGNMENT)
                self.state = 69
                self.exp()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.match(CorgiScriptParser.IF)
                self.state = 71
                self.boolexp()
                self.state = 72
                self.match(CorgiScriptParser.THEN)
                self.state = 73
                self.statement()
                self.state = 74
                self.match(CorgiScriptParser.ELSE)
                self.state = 75
                self.statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.function()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 78
                self.match(CorgiScriptParser.WHILE)
                self.state = 79
                self.boolexp()
                self.state = 80
                self.match(CorgiScriptParser.DO)
                self.state = 81
                self.statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 83
                self.match(CorgiScriptParser.READ)
                self.state = 84
                self.match(CorgiScriptParser.OPENPAREN)
                self.state = 85
                self.match(CorgiScriptParser.IDENT)
                self.state = 86
                self.match(CorgiScriptParser.CLOSEPAREN)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 87
                self.match(CorgiScriptParser.WRITE)
                self.state = 88
                self.match(CorgiScriptParser.OPENPAREN)
                self.state = 89
                self.exp()
                self.state = 90
                self.match(CorgiScriptParser.CLOSEPAREN)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 92
                self.match(CorgiScriptParser.WRITE)
                self.state = 93
                self.match(CorgiScriptParser.OPENPAREN)
                self.state = 94
                self.boolexp()
                self.state = 95
                self.match(CorgiScriptParser.CLOSEPAREN)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 97
                self.match(CorgiScriptParser.WRITE)
                self.state = 98
                self.match(CorgiScriptParser.OPENPAREN)
                self.state = 99
                self.string()
                self.state = 100
                self.match(CorgiScriptParser.CLOSEPAREN)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 102
                self.match(CorgiScriptParser.OPENPAREN)
                self.state = 103
                self.statements()
                self.state = 104
                self.match(CorgiScriptParser.CLOSEPAREN)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 106
                self.match(CorgiScriptParser.GOTO)
                self.state = 107
                self.match(CorgiScriptParser.IDENT)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 108
                self.match(CorgiScriptParser.IDENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorgiScriptParser.TermContext)
            else:
                return self.getTypedRuleContext(CorgiScriptParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(CorgiScriptParser.PLUS)
            else:
                return self.getToken(CorgiScriptParser.PLUS, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(CorgiScriptParser.SUB)
            else:
                return self.getToken(CorgiScriptParser.SUB, i)

        def getRuleIndex(self):
            return CorgiScriptParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = CorgiScriptParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.term()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CorgiScriptParser.PLUS or _la==CorgiScriptParser.SUB:
                self.state = 112
                _la = self._input.LA(1)
                if not(_la==CorgiScriptParser.PLUS or _la==CorgiScriptParser.SUB):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 113
                self.term()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Boolean_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(CorgiScriptParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(CorgiScriptParser.FALSE, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorgiScriptParser.ExpContext)
            else:
                return self.getTypedRuleContext(CorgiScriptParser.ExpContext,i)


        def EQUAL(self):
            return self.getToken(CorgiScriptParser.EQUAL, 0)

        def LESSEQUAL(self):
            return self.getToken(CorgiScriptParser.LESSEQUAL, 0)

        def OPENPAREN(self):
            return self.getToken(CorgiScriptParser.OPENPAREN, 0)

        def boolexp(self):
            return self.getTypedRuleContext(CorgiScriptParser.BoolexpContext,0)


        def CLOSEPAREN(self):
            return self.getToken(CorgiScriptParser.CLOSEPAREN, 0)

        def getRuleIndex(self):
            return CorgiScriptParser.RULE_boolean_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean_" ):
                return visitor.visitBoolean_(self)
            else:
                return visitor.visitChildren(self)




    def boolean_(self):

        localctx = CorgiScriptParser.Boolean_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_boolean_)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(CorgiScriptParser.TRUE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(CorgiScriptParser.FALSE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.exp()
                self.state = 122
                self.match(CorgiScriptParser.EQUAL)
                self.state = 123
                self.exp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 125
                self.exp()
                self.state = 126
                self.match(CorgiScriptParser.LESSEQUAL)
                self.state = 127
                self.exp()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.match(CorgiScriptParser.OPENPAREN)
                self.state = 130
                self.boolexp()
                self.state = 131
                self.match(CorgiScriptParser.CLOSEPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BooltermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(CorgiScriptParser.NOT, 0)

        def boolean_(self):
            return self.getTypedRuleContext(CorgiScriptParser.Boolean_Context,0)


        def getRuleIndex(self):
            return CorgiScriptParser.RULE_boolterm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolterm" ):
                return visitor.visitBoolterm(self)
            else:
                return visitor.visitChildren(self)




    def boolterm(self):

        localctx = CorgiScriptParser.BooltermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_boolterm)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorgiScriptParser.NOT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(CorgiScriptParser.NOT)
                self.state = 136
                self.boolean_()
                pass
            elif token in [CorgiScriptParser.FALSE, CorgiScriptParser.TRUE, CorgiScriptParser.OPENPAREN, CorgiScriptParser.INTNUM, CorgiScriptParser.IDENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.boolean_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BoolexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolterm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorgiScriptParser.BooltermContext)
            else:
                return self.getTypedRuleContext(CorgiScriptParser.BooltermContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(CorgiScriptParser.AND)
            else:
                return self.getToken(CorgiScriptParser.AND, i)

        def getRuleIndex(self):
            return CorgiScriptParser.RULE_boolexp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolexp" ):
                return visitor.visitBoolexp(self)
            else:
                return visitor.visitChildren(self)




    def boolexp(self):

        localctx = CorgiScriptParser.BoolexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_boolexp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.boolterm()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CorgiScriptParser.AND:
                self.state = 141
                self.match(CorgiScriptParser.AND)
                self.state = 142
                self.boolterm()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(CorgiScriptParser.STRING, 0)

        def getRuleIndex(self):
            return CorgiScriptParser.RULE_string

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = CorgiScriptParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(CorgiScriptParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(CorgiScriptParser.IDENT, 0)

        def INTNUM(self):
            return self.getToken(CorgiScriptParser.INTNUM, 0)

        def OPENPAREN(self):
            return self.getToken(CorgiScriptParser.OPENPAREN, 0)

        def exp(self):
            return self.getTypedRuleContext(CorgiScriptParser.ExpContext,0)


        def CLOSEPAREN(self):
            return self.getToken(CorgiScriptParser.CLOSEPAREN, 0)

        def getRuleIndex(self):
            return CorgiScriptParser.RULE_factor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = CorgiScriptParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_factor)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CorgiScriptParser.IDENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(CorgiScriptParser.IDENT)
                pass
            elif token in [CorgiScriptParser.INTNUM]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(CorgiScriptParser.INTNUM)
                pass
            elif token in [CorgiScriptParser.OPENPAREN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.match(CorgiScriptParser.OPENPAREN)
                self.state = 153
                self.exp()
                self.state = 154
                self.match(CorgiScriptParser.CLOSEPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CorgiScriptParser.FactorContext)
            else:
                return self.getTypedRuleContext(CorgiScriptParser.FactorContext,i)


        def MULTIPLY(self, i:int=None):
            if i is None:
                return self.getTokens(CorgiScriptParser.MULTIPLY)
            else:
                return self.getToken(CorgiScriptParser.MULTIPLY, i)

        def DIVIDE(self, i:int=None):
            if i is None:
                return self.getTokens(CorgiScriptParser.DIVIDE)
            else:
                return self.getToken(CorgiScriptParser.DIVIDE, i)

        def MODULO(self, i:int=None):
            if i is None:
                return self.getTokens(CorgiScriptParser.MODULO)
            else:
                return self.getToken(CorgiScriptParser.MODULO, i)

        def getRuleIndex(self):
            return CorgiScriptParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = CorgiScriptParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.factor()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CorgiScriptParser.MULTIPLY) | (1 << CorgiScriptParser.DIVIDE) | (1 << CorgiScriptParser.MODULO))) != 0):
                self.state = 159
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CorgiScriptParser.MULTIPLY) | (1 << CorgiScriptParser.DIVIDE) | (1 << CorgiScriptParser.MODULO))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 160
                self.factor()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





